--- a/example/libs/lib_b/package.json
+++ b/example/libs/lib_b/package.json
@@ -4,12 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc"
+    "build": "echo 'a'"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "typescript": "^3.6.3"
-  }
+  "license": "ISC"
 }
