--- a/package.json
+++ b/package.json
@@ -20,11 +20,19 @@
   },
   "homepage": "https://github.com/berhalak/ber#readme",
   "bin": {
-    "ber": "./bin/global.js"
+    "ber": "./dist/bin/global.js"
   },
   "preferGlobal": true,
-  "main": "index.js",
+  "main": "./dist/index.js",
   "dependencies": {
-    "promise-fs": "^2.1.1"
+    "fs-extra": "^8.1.0"
+  },
+  "devDependencies": {
+    "@types/fs-extra": "^8.0.0",
+    "@types/node": "^12.7.8",
+    "typescript": "3.6.3"
+  },
+  "scripts": {
+    "build": "tsc"
   }
 }
