--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
   "preferGlobal": true,
   "main": "./dist/index.js",
   "dependencies": {
-    "fs-extra": "^8.1.0"
+    "fs-extra": "^8.1.0",
+    "rimraf": "2.6.3"
   },
   "devDependencies": {
     "@types/fs-extra": "^8.0.0",
     "@types/node": "^12.7.8",
+    "@types/rimraf": "^2.0.2",
     "typescript": "3.6.3"
   },
   "scripts": {
